package Tugas2;

public interface RefillFuel {
    public double isiBahanBakar(double liters);
}
